# Floatsat

./: README.md
codes/obc/dependencies/rodos/: .clang-format  .gitignore  .gitlab-ci.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENCE.txt  README-cmake.md  README-directory-struct.txt  README-eclipse.md  README-fast-intro.md  README-set-tool-chains.md  README.md  VERSION  default.nix  setenvs.sh  with-cmake.nix
codes/obc/dependencies/rodos/api/: README.txt  application.h  basic-serializers.hh  checksumes.h  commbuffer.h  default-platform-parameter.h  fifo.h  gateway.h  hal.h  hostinfos.h  initiator.h  listelement.h  misc-rodos-funcs.h  putter.h  reserved_application_ids.h  reserved_topic_ids.h  rodos-assert.h  rodos-debug.h  rodos-errorcodes.h  rodos-semaphore.h  rodos-version.h  rodos.h  stdlib_pico.h  stream-bytesex.h  string_pico.h  subscriber.h  thread.h  timeevent.h  timemodel.h  timepoints.h  topic.h  yprintf.h
codes/obc/dependencies/rodos/api/gateway/: gateway.h  linkinterface.h  linkinterfacecan.h  linkinterfaceshm.h  linkinterfaceuart.h  linkinterfaceudp.h  networkmessage.h  router.h  topicreporter.h
codes/obc/dependencies/rodos/api/hal/: genericIO.h  hal_adc.h  hal_can.h  hal_ethernet.h  hal_gpio.h  hal_i2c.h  hal_pwm.h  hal_sharedmemory.h  hal_spi.h  hal_uart.h  tcp.h  udp.h
codes/obc/dependencies/rodos/cmake/: CodeCoverage.cmake  executable.cmake
codes/obc/dependencies/rodos/cmake/port/: discovery.cmake  linux-makecontext.cmake  linux-x86.cmake  novaboard.cmake  posix.cmake  raspberrypi3.cmake  sf2.cmake  skith.cmake  stm32f4.cmake
codes/obc/dependencies/rodos/doc/: how-to-load-to-discovery-board-stm32f4.md  how-to-make-a-boot-SD-card-for-Raspberry.md  how-to-use-rodos-on-posix-on-raspberry.md
codes/obc/dependencies/rodos/scripts/: README.txt  quit-if-arch-is-undef.sh  quit-if-arch-is-wrong.sh  quit-if-environment-is-wrong.sh
codes/obc/dependencies/rodos/scripts/build-scripts/: README.txt  doit-cmake.sh  generic-compile-directory.sh  rodos-executable.sh  rodos-lib.sh
codes/obc/dependencies/rodos/scripts/help-scrips/: elf-file-content-addrss-and-size.sh  how-to-make-a-boot-SD-card-for-Raspberry.sh  rodos-all-libs.sh  rodos-clear.sh  rodos-countlines.sh  rodos-estimate-required-stack.sh  rodos-formatfiles.sh  set-git-aware-promt.sh  stack-sizes.py  temp-compile-all-sources.sh  temp-cp-tmp.sh  temp-diff-tmp.sh
codes/obc/dependencies/rodos/src/: other-ports.txt
codes/obc/dependencies/rodos/src/bare-metal/: 00-required-functions-to-port.txt  README.txt  other-ports.txt
codes/obc/dependencies/rodos/src/bare-metal-generic/: crt.cpp  hw_specific.h  rodos-semaphore.cpp  scheduler.cpp  scheduler.h  thread_on_hw.cpp
codes/obc/dependencies/rodos/src/independent/: application.cpp  checksumes.cpp  genericIO.cpp  globaldata.cpp  globalobjects.cpp  interruptservers.cpp  listelement.cpp  main.cpp  main_usermain.cpp  misc-rodos-funcs.cpp  printfverbosity.cpp  rodos-debug.cpp  stdlib_pico.cpp  stream-bytesex.cpp  string_pico.cpp  subscriber.cpp  tcp.cpp  thread.cpp  timeevent.cpp  timemodel.cpp  topic.cpp  udp.cpp  yprintf.cpp  yprintf.cpp-more-simple-no%e
codes/obc/dependencies/rodos/src/on-posix/: hal  hostinfos.cpp  hw_specific.cpp  hw_specific.h  hw_tcp.cpp  hw_tcp.h  hw_time.cpp  hw_timer.cpp  hw_udp.cpp  hw_udp.h  platform-parameter.h  posix-warning.txt  rodos-semaphore.cpp  scheduler.cpp  scheduler.h  thread_on_posix.cpp
codes/obc/dependencies/rodos/src/on-posix-mac/: getcharnowait.cpp  hostinfos.cpp  hw_specific.cpp  hw_specific.h  hw_tcp.cpp  hw_tcp.h  hw_time.cpp  hw_timer.cpp  hw_uart.cpp  hw_uart.h  hw_udp.cpp  hw_udp.h  platform-parameter.h  readme-warning.txt  rodos-semaphore.cpp  scheduler.cpp  scheduler.h  thread_on_posix.cpp
codes/obc/dependencies/rodos/support/support-libs/: activity.cpp  activity.h  allocableobjects.h  ccsds  filesystem.h  matlib.cpp  matlib.h  misc-support.cpp  misc-support.h  monitoringMsg.cpp  monitoringMsg.h  random.cpp  random.h  ringbuffer.h  rodos-result.h  s3p-asynchronous-interface.h  s3p-code.h  s3p-senquencediagrams.odp  s3p-synchronous-interface.h  scanf-substitue.cpp  scanf-substitue.h  signalprocessing.h  sortedlist.cpp  sortedlist.h  support-libs.h  synccommbuffer.h
codes/obc/dependencies/rodos/support/support-programs/: doit.sh
codes/obc/dependencies/rodos/support/tools/: bitFieldsSerializer  make-sh-links-for-cmds  mask-generator  mask-generator-print-all-fields  mask-generator-splitt  print_serialized_pos_len  serializer  telecommand-and-param-names  telecommand-generator
codes/obc/dependencies/rodos/test-suite/: CMakeLists.txt  README.md  doit-compare.sh  doit-first-run.sh  execute-all.sh  prt-seconds-now.h  terminate-test.h  test-runner.sh
codes/obc/dependencies/rodos/test-suite/core-fast/: activity-simple.cpp  activity-yield.cpp  checksum-test.cpp  commbuffer-test.cpp  commbufftest-struct.cpp  deep-sleep-mode.cpp  fifo-test.cpp  fifotest.cpp  helloworld-minimalistic.cpp  initiator-with-application.cpp  initiator.cpp  make-errors-asserts.cpp  own-scheduler.cpp  preemption-and-bussywaiting.cpp  printf-formats.cpp  printfconditional.cpp  resumefromevent.cpp  resumer.cpp  s3p-asynchronous-test.cpp  s3p-synchronous-test.cpp  scanf-sub-test.cpp  semaphore-io.cpp  semaphore-police.cpp  semaphore-scope-protector.cpp  semaphore-using-PROTECT_SCOPE.cpp  semaphore-worm-reenter.cpp  semaphore-worm.cpp  semaphoretest.cpp  snprintf.cpp  sprintf.cpp  syncfifotest.cpp  time.cpp  timeevent-resumer01.cpp  timeevent-resumer02.cpp  timeevents.cpp  timeloop.cpp  timepoints-errlog.cpp  timewaitat.cpp  timewaitatutc.cpp  timewaitbeats-shortcut.cpp  (+2 more)
codes/obc/dependencies/rodos/test-suite/core-slow/: preemptiontest-and-ceiler.cpp  priotest.cpp  random-test-float.cpp  semaphore-counter.cpp  semaphore-deadlock.cpp
codes/obc/dependencies/rodos/test-suite/embedded-test/: blackboard-publicdata.cpp  datacollector-requester.cpp  embedded-basic.cpp  embedded-middleware.cpp  embedded-test1.cpp  embedded-test2.cpp  filter.cpp
codes/obc/dependencies/rodos/tutorials/: 00-README.txt  CMakeLists.txt
(+898 files in other folders)
